--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
 * {
   font-family: Arial, Helvetica, sans-serif;
+  color: rgb(242, 242, 242);
 }
 
 body {
   padding: 60px;
+  background-color: rgb(34 34 34);
 }
 
 input {
